<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_main">


    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNotesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Note title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCourses" />

    <EditText
        android:id="@+id/textNoteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Note text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCourses"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
        app:layout_constraintTop_toBottomOf="@+id/textNotesTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>